--- a/client/PayPalETicketingClient/PayPalETicketingClient/main.htm
+++ b/client/PayPalETicketingClient/PayPalETicketingClient/main.htm
@@ -23,8 +23,12 @@
         <button id="validate">Validate</button>
         </div>
       </div>
+      <br/>
+      <div>
+        <input type="checkbox" id="sync"/>Sync with server
+      </div>
 
-      <script type="text/javascript" src="jQuery-1.7.2.min.js"></script>
+      <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
       <script type="text/javascript" src="main.js"></script>
       <script type="text/javascript">
         $(window).load(eticketing.init);
